@@ -129,7 +129,7 @@ public class TimeDatum extends Datum {
   public Datum equalsTo(Datum datum) {
     if (datum.type() == TajoDataTypes.Type.TIME) {
       return DatumFactory.createBool(time.equals(((TimeDatum) datum).time));
-    } else if (datum.isNull()) {
+    } else if (datum instanceof NullDatum  || datum.isNull()) {
       return datum;
     } else {
       throw new InvalidOperationException();
@@ -140,7 +140,7 @@ public class TimeDatum extends Datum {
   public int compareTo(Datum datum) {
     if (datum.type() == TajoDataTypes.Type.TIME) {
       return time.compareTo(((TimeDatum)datum).time);
-    } else if (datum.isNull()) {
+    } else if (datum instanceof NullDatum || datum.isNull()) {
       return -1;
     } else {
       throw new InvalidOperationException();
@@ -148,6 +148,9 @@ public class TimeDatum extends Datum {
   }
 
   public boolean equals(Object obj) {
+    if (obj instanceof NullDatum) {
+        return false;
+    }
     if (obj instanceof TimeDatum) {
       TimeDatum another = (TimeDatum) obj;
       return time.isEqual(another.time);
